# kabosu-plus

./: COPYING  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
src/kabosu_plus/: __init__.py  types.py
src/kabosu_plus/sbv2/: COPYING  constants.py  logging.py  normalizer.py  test_normalizer.py
src/kabosu_plus/sbv2/nlp/: __init__.py  bert_models.py  llamacpp_embedding_models.py  onnx_bert_models.py  symbols_ko.py
src/kabosu_plus/sbv2/nlp/chinese/: COPYING  bert_feature.py  g2p.py  normalizer.py
src/kabosu_plus/sbv2/nlp/english/: COPYING  bert_feature.py  g2p.py
src/kabosu_plus/sbv2/nlp/japanese/: COPYING  bert_feature.py  g2p.py  g2p_utils.py  normalizer.py  test_normalizer.py
src/kabosu_plus/sbv2/nlp/japanese/normalizer/: __init__.py
src/kabosu_plus/sbv2/nlp/japanese/user_dict/: __init__.py  part_of_speech_data.py
src/kabosu_plus/sbv2/nlp/korean/: COPYING  bert_feature.py  g2p.py  korean.py
src/kabosu_plus/sbv2/nlp/muliringual/: bert_feature.py
src/kabosu_plus/sbv2/nlp/multiringual/: bert_feature.py  g2p.py
tests/: test_main.py  test_normalizer.py  test_pyopenjtalk-plus.py
web_resource/: README_JA.md
