[project]
name = "kabosu-plus"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "e2k>=0.6.2",
    "g2p-en>=2.1.0",
    "jaconv>=0.4.0",
    "jamo>=0.4.1",
    "jieba>=0.42.1",
    "jpreprocess>=0.1.5",
    "kabosu-core[all]",
    "kanalizer>=0.1.1",
    "marine-plus>=0.0.6.post3",
    "mecab-ko>=1.0.2",
    "num2words>=0.5.14",
    "numpy<2",
    "onnxruntime>=1.22.1",
    "onnxruntime>=1.22.1 ; (platform_machine != 'x86_64' and sys_platform == 'linux') or (sys_platform != 'linux' and sys_platform != 'win32')",
    "onnxruntime-directml>=1.22.0 ; sys_platform == 'win32'",
    "onnxruntime-gpu>=1.22.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "pypinyin>=0.55.0",
    "sudachidict-core>=20250825",
    "sudachipy>=0.6.10",
    "yomikata",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "pytest"
]



[tool.hatch.build.targets.sdist]
only-include = [
    "src/kabosu_plus",
    "LICENSE",
    "pyproject.toml",
    "README.md",
]
[tool.hatch.build.targets.wheel]
packages = ["src/kabosu_plus"]

[tool.uv.sources]
yomikata = { git = "https://github.com/q9uri/yomikata", rev = "ac5a27a2ed72ea4fab4e3a79e2d4799fb411e6bb" }
optimum = { git = "https://github.com/huggingface/optimum" }
optimum-onnx = { git = "https://github.com/huggingface/optimum-onnx.git" }
kabosu-core = { git = "https://github.com/q9uri/kabosu-core", rev = "6a9a39a3befed556222d0c52cac4136b31edfcc1" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
